--- a/exercícios/ex022/fundo001.html
+++ b/exercícios/ex022/fundo001.html
@@ -10,16 +10,21 @@
     body {
         background-image: url(imagens/pattern004.png);
     }
+    *{
+      margin: 0px;
+      padding: 0px;
+    }
      div.quadrado {
         display: inline-block;  
         border: 2px solid black;
         border-radius: 10px;
-        width: 300px;
+        width: 400px;
         height: 300px;
         background-color: lightgray;
      }
      div#q1 {
         background-color: skyblue;
+        margin-left: 10px;
      }
      div#q2 {
         background-image: linear-gradient(to bottom, yellow, red);
@@ -30,14 +35,12 @@
     </style>
 </head>
 <body>
-    <div class="quadrado" id="q1">
-
-    </div>
-    <div class="quadrado" id="q2">
-
-    </div>
-    <div class="quadrado" id="q3">
-
-    </div>
+   <div class="quadrado" id="q1">
+   </div>
+   <div class="quadrado" id="q2">
+   </div>
+   <div class="quadrado" id="q3">
+   </div>
+    
 </body>
 </html>
