--- a/exercícios/ex022/fundo006.html
+++ b/exercícios/ex022/fundo006.html
@@ -4,19 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fizo de tela</title>
     <style>
         body {
             height: 100vh;
-            background-color: black;
-            background-image: url(imagens/wallpaper002.jpg);
+            /*background-color: black;
+            background-image: url('imagens/wallpaper002.jpg');
             background-repeat: no-repeat;
             background-position: center center;
             background-size: cover;
+            background-attachment: fixed;
+            */
+            background: black url('imagens/wallpaper002.jpg') center center no-repeat fixed;
+            background-size: cover;
+
+            /*
+            Shorthand
+            color > image > position > repeat  > attachment. O size faz por fora
+            */
         }
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
         }
@@ -26,6 +35,12 @@
     <main>
         <h1>Testde de Imagem de Fundo</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, impedit, provident autem labore laborum possimus eos ducimus dolorum similique consequuntur laboriosam odit quasi laudantium totam quia necessitatibus itaque incidunt. Nostrum. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure ab ullam obcaecati labore commodi, reprehenderit atque quae in, nulla rem nobis mollitia nihil nostrum tempora dolorum molestiae iste cum quod. Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum blanditiis repudiandae iusto eos modi illo exercitationem maxime aliquid mollitia, sint, quasi corrupti adipisci quibusdam facilis tempora, illum quaerat iste unde.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas quidem cupiditate quis voluptatum! Nesciunt tempore nostrum similique exercitationem molestiae officiis quaerat, unde atque reprehenderit eius quae. Rem consequatur dolorum adipisci.
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius blanditiis pariatur ratione quibusdam earum et repellat, aperiam sed expedita hic fugit perferendis temporibus deserunt. Corporis ad praesentium ullam ea commodi.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto fugit, aperiam quo officiis quis accusantium harum hic porro autem totam voluptatum consequatur perferendis odit cumque, maiores possimus atque asperiores cum.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet repellat illo harum at ipsa corporis tempora. Est voluptatum natus dignissimos! Sapiente est blanditiis fugit vel inventore facilis quos, consequatur nisi.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni ex eveniet iure facilis. Accusamus, eos a! Amet sequi cum corrupti aspernatur odit dolor maxime ipsum, ab accusantium molestias similique pariatur!
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod vero tenetur voluptatibus quas, maiores omnis a? Ipsum praesentium deserunt nulla ullam magnam quas doloremque, harum, asperiores, ipsam officiis odit facere!
         </p>
     </main>
 </body>
