--- a/exercícios/ex022/teste001.html
+++ b/exercícios/ex022/teste001.html
@@ -4,26 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alinhamento vertical</title>
+    <title>Centralização de caixas</title>
     <style>
         #container {
+            background-color: red;
+            height: 96vh;
             background-image: url(imagens/target001.png);
             background-size: 100% 100%;
-            height: 96vh; 
-            background-color: purple;
-            padding: 10px;
         }
         #conteudo {
+            background-color: blue;
             background-image: url(imagens/target001.png);
             background-size: 100% 100%;
-
             position: absolute;
-            height: 200px;
-            width: 400px;
-            background-color: yellow;
-
+            top: 50%;
             left: 50%;
-            top:50%;
+            width: 400px;
+            height: 300px;
             transform: translate(-50%, -50%);
         }
     </style>
@@ -34,6 +31,5 @@
 
         </article>
     </section>
-    
 </body>
 </html>
